# webrtc

./: CMakeLists.txt  readme.md  webrtc_stream.cpp
include/: api.h  mjpeg2yuv.h  shm.h  video_capture.h  video_ros.h  video_stream.h  video_stream_web.h
public/: index.html  index.html.1
src/: main.cpp
test/: available_devices.cpp  data_proccess_shm.cpp  gstreamer_appsrc.cpp  gstreamer_appsrc_webertc.cpp  multi_thread_shm.cpp  rga_test.cpp  ring_buffer_shm.cpp  save_to_shm.cpp  thread_test.cpp  webertc_read_write.cpp  webrtc_appsrc_shm.cpp  zero_copy_shm.cpp
